--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no, minimal-ui">
   <meta name="format-detection" content="telephone=no" />
 
-  <meta property="og:title" content="2048 game"/>
-  <meta property="og:site_name" content="2048 game"/>
-  <meta property="og:description" content="Join the numbers and get to the 2048 tile! Careful: this game is extremely addictive!"/>
-  <meta property="og:image" content="http://gabrielecirulli.github.io/2048/meta/og_image.png"/>
+  <meta property="og:title" content="±64 game"/>
+  <meta property="og:site_name" content="±64 game"/>
+  <meta property="og:description" content="Join the numbers and get to the ±64 tile! Careful: this game is extremely addictive!"/>
+  <meta property="og:image" content="http://cuviper.github.io/pm64/meta/og_image.png"/>
 </head>
 <body>
   <div class="container">
@@ -148,7 +148,7 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,"script","//www.google-analytics.com/analytics.js","ga");
 
-    ga("create", "UA-42620757-2", "gabrielecirulli.github.io");
+    ga("create", "UA-49730575-1", "cuviper.github.io");
     ga("send", "pageview");
   </script>
 </body>
