--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <meta property="og:title" content="±64 game"/>
   <meta property="og:site_name" content="±64 game"/>
-  <meta property="og:description" content="Join the numbers and get to the ±64 tile! Careful: this game is extremely addictive!"/>
+  <meta property="og:description" content="Join the numbers and get to the ±64 tile!"/>
   <meta property="og:image" content="http://cuviper.github.io/pm64/meta/og_image.png"/>
 </head>
 <body>
@@ -111,7 +111,7 @@
     Derived from <a href="http://git.io/2048" target="_blank">2048 by Gabriele Cirulli</a>, which is based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
     </p>
     <div class="sharing">
-      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out 2048, a game where you join numbers to score high! #2048game" data-via="gabrielecirulli" data-url="http://git.io/2048" data-counturl="http://gabrielecirulli.github.io/2048/">Tweet</a>
+      <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out ±64, a variant of #2048game adding negative tiles! #pm64game" data-via="CUViper" data-url="http://cuviper.github.io/pm64/">Tweet</a>
       <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 
       <form class="pp-donate" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
