Require *both* 64 and -64 to win
- Track wonHigh and wonLow in game state.
- Update index.html and README.md for the new win condition.

Technically, one could win without having both at the same time, e.g.
reaching all the way to 128 and then making a -64.  Seems unlikely to
happen, but that's still plenty deserving of a win.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to a <strong>±64 tile!</strong></p>
+      <p class="game-intro">Join the numbers and get <strong>both ±64</strong> tiles!</p>
       <a class="restart-button">New Game</a>
     </div>
 
